Honkalculate no longer covers tiers (#620)
The Honkalculate table no longer uses `position: absolute` to position itself on the page, so it (shouldn't) cover the list of tiers that you are pulling sets from.

https://www.smogon.com/forums/posts/10085323

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -221,10 +221,7 @@ th {
     text-align: center;
     width: 27.5em;
 }
-.holder-0 {
-    position: absolute;
-    top: 151px;
-}
+
 #holder-2 tr {
     white-space: nowrap;
 }
@@ -523,4 +520,8 @@ table.field {
 .extraSetItems,
 .extraSetMoves {
     width: 100%;
+}
+
+.flex-parent {
+	display: flex;
 }
